<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"></SurfaceView>

    <LinearLayout
        android:id="@+id/view_search_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal"
        android:visibility="visible">
        <EditText
            android:inputType="text"
            android:id="@+id/video_search"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="搜索"
            tools:ignore="MissingConstraints"></EditText>
        <Button
            android:id="@+id/video_search_btn"
            android:background="@color/transplant"
            android:text="@string/search_icon"
            android:textSize="30dp"
            android:fontFamily="@font/iconfont"
android:textColor="@color/white"
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:ignore="MissingConstraints"></Button>
    </LinearLayout>
    <LinearLayout
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/video_seekBar"
        android:padding="0dp">
    <TextView
        android:id="@+id/VideoMakerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="author"
        android:textStyle="bold"></TextView>
    <TextView
        android:id="@+id/video_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:text="title"
        android:textSize="25sp"></TextView>
    <TextView
        android:id="@+id/video_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/teal_200"
        android:text="描述"></TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/video_utils"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@id/video_seekBar"
        app:layout_constraintRight_toRightOf="parent">
    <ImageButton
        android:id="@+id/video_iamge"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/touxiang"
        android:scaleType="fitXY"
        android:src="@mipmap/wode"
        tools:ignore="MissingConstraints">

    </ImageButton>
    <Button
        android:textSize="35sp"
        android:padding="0dp"
        android:id="@+id/video_thumb"
        android:text="@string/thumb_up"
        android:fontFamily="@font/iconfont"
        android:textColor="@color/white"
        android:background="@color/transplant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        ></Button>
    <TextView
        android:padding="0dp"
        android:id="@+id/video_num_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="999"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"></TextView>
    <Button
        android:textSize="35sp"
        android:padding="0dp"
        android:textColor="@color/white"
        android:fontFamily="@font/iconfont"
        android:id="@+id/video_comment"
        android:text="@string/comment"
        android:background="@color/transplant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        ></Button>
    <TextView
        android:padding="0dp"
        android:id="@+id/video_num_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="999"
        android:textSize="20sp"></TextView>
    <Button
        android:textSize="40sp"
        android:textColor="@color/white"
        android:padding="0dp"
        android:id="@+id/video_store"
        android:background="@color/transplant"
        android:fontFamily="@font/iconfont"
        android:text="@string/reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        ></Button>
    <TextView
        android:padding="0dp"
        android:id="@+id/video_num_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="999"
        android:textSize="20sp"></TextView>
    <Button
        android:paddingBottom="0dp"
        android:textSize="55sp"
        android:textColor="@color/white"
        android:padding="0dp"
        android:id="@+id/video_share"
        android:text="@string/share"
        android:background="@color/transplant"
        android:fontFamily="@font/iconfont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Button>
    </LinearLayout>
    <SeekBar
        android:id="@+id/video_seekBar"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"></SeekBar>

</androidx.constraintlayout.widget.ConstraintLayout>