<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPager.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:clickable="true"
        android:id="@+id/fragment_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintVertical_weight="1"
        tools:ignore="MissingConstraints" >

    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout
        android:id="@+id/music_display_area"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:clipChildren="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_vertical"
        tools:ignore="MissingConstraints">

    <ImageView
        android:layout_marginBottom="-10dp"
        android:layout_marginLeft="-10dp"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:id="@+id/music_avatar"
        android:layout_marginRight="-20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/login_btn_style"
        android:layout_width="100dp"
        android:layout_height="100dp"/>
    <TextView
        android:id="@+id/music_content"
        android:marqueeRepeatLimit="marquee_forever"
        android:background="@drawable/login_regstyle_click"
        android:layout_width="0dp"
        android:layout_gravity="bottom"
        android:paddingTop="15dp"
        android:paddingLeft="40dp"
        android:paddingBottom="15dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="nihao"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/music_display"
            android:padding="0dp"
            android:textSize="40sp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="-20dp"
            android:background="@drawable/touxiang"
            android:layout_marginBottom="5dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/display_music"
            android:fontFamily="@font/iconfont"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/music_display_area"
        android:background="@drawable/inner_press"
        android:id="@+id/music_detail_area"
        android:paddingTop="20dp"
        android:paddingBottom="50dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/music_detail_top"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">
            <Button
                android:id="@+id/detail_back_btn"
                android:text="@string/down_back"
                android:fontFamily="@font/iconfont"
                android:textSize="60sp"
                android:padding="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transplant"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/show_detail_area"
            app:layout_constraintTop_toBottomOf="@+id/music_detail_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
            <ImageView
                android:id="@+id/music_detail_avatar"
                android:layout_width="match_parent"
                android:layout_height="250dp"></ImageView>
            <TextView
                android:id="@+id/detail_music_name"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"></TextView>

            <TextView
                android:id="@+id/detail_music_player"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"></TextView>

            <TextView
                android:id="@+id/detial_music_content"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"></TextView>
        </LinearLayout>
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/show_detail_area"
            android:padding="0dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">
            <Button
                android:id="@+id/last_detail_music"
                android:layout_width="60dp"
                android:text="@string/last_music"
                android:fontFamily="@font/iconfont"
                android:textStyle="bold"
                android:textSize="60sp"
                android:background="@color/transplant"
                android:layout_height="60dp"/>
            <Button
                android:id="@+id/display_detail_music"
                android:layout_marginRight="30dp"
                android:layout_width="60dp"
                android:text="@string/display_music"
                android:fontFamily="@font/iconfont"
                android:textStyle="bold"
                android:textSize="60sp"
                android:background="@color/transplant"
                android:layout_marginLeft="30dp"
                android:layout_height="60dp"/>
            <Button
                android:id="@+id/next_detail_music"
                android:layout_width="60dp"
                android:text="@string/next_music"
                android:fontFamily="@font/iconfont"
                android:textStyle="bold"
                android:background="@color/transplant"
                android:textSize="60sp"
                android:layout_height="60dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>